k8s/was-deployment.yml
apiVersion: v1
kind: Service
metadata:
  name: was-service
spec:
  selector:
    app: was
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: was-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: was
  template:
    metadata:
      labels:
        app: was
    spec:
      containers:
        - name: was
          image: heebin00/was:v3.1
          ports:
            - containerPort: 3000
      nodeSelector:
        app: was  # was 역할을 가진 노드에 배치하도록 설정
