k8s/web-deployment.yml
apiVersion: v1
kind: Service
metadata:
  name: web-service
spec:
  selector:
    app: web
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30080  # NodePort 포트를 설정
  type: NodePort  # 서비스 타입을 NodePort로 설정
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
        - name: web
          image: heebin00/web:v4.7
          ports:
          - containerPort: 80
      nodeSelector:
        app: web  # web 역할을 가진 노드에 배치하도록 설정
