k8s/web-was-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-was-ingress
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/api"
        backend:
          service:
            name: was-service
            port:
              number: 3000
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: web-service
            port:
              number: 80
